--- a/views/products/edit.ejs
+++ b/views/products/edit.ejs
@@ -26,9 +26,9 @@
       />
       <label for="category">Select Category</label>
       <select name="category" id="category">
-        <option value="fruit">Fruit</option>
-        <option value="vegetable">vegetable</option>
-        <option value="dairy">Dairy</option>
+        <% for (let category of categories) {%>
+          <option value="<%=category%>" <%= product.category === category ? "selected": "" %>><%=category%></option>
+          <% } %>
       </select>
       <button>Submit</button>
     </form>
