--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -19,11 +19,12 @@
       />
       <label for="category">Select Category</label>
       <select name="category" id="category">
-        <option value="fruit">Fruit</option>
-        <option value="vegetable">vegetable</option>
-        <option value="dairy">Dairy</option>
+        <% for (let category of categories) {%>
+        <option value="<%=category%>"><%=category%></option>
+        <% } %>
       </select>
       <button>Submit</button>
     </form>
+    <a href="/products">Cancel</a>
   </body>
 </html>
