--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -14,5 +14,9 @@
 
     <a href="/products">All Products</a>
     <a href="/products/<%= product.id%>/edit">Edit Product</a>
+
+    <form action="/products/<%=product.id%>?_method=DELETE" method="POST">
+      <button>Delete</button>
+    </form>
   </body>
 </html>
