show page changes and deleting farm is added

--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -10,6 +10,11 @@
     <ul>
       <li>Price: $<%= product.price %></li>
       <li>Category: <%= product.category %></li>
+      <li>
+        <a href="/farms/<%= product.farm._id %>"
+          >Go to <%= product.farm.name %></a
+        >
+      </li>
     </ul>
 
     <a href="/products">All Products</a>
