--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -6,8 +6,9 @@
     <title>New Product</title>
   </head>
   <body>
-    <h1>Add a Product</h1>
-    <form action="/products" method="post">
+    <h1><%= farm.name %></h1>
+    <h2>Add a Product</h2>
+    <form action="/farms/<%= farm._id %>/products" method="post">
       <label for="name">Product Name</label>
       <input type="text" name="name" id="name" placeholder="Product Name" />
       <label for="price">Price (Unit)</label>
@@ -25,6 +26,6 @@
       </select>
       <button>Submit</button>
     </form>
-    <a href="/products">Cancel</a>
+    <a href="/farms/<%= farm._id %>">Back to Farm</a>
   </body>
 </html>
